--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,21 @@
 body {
   background-color: rgb(245, 245, 245);
+  padding: 0px;
+  margin: 10px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.toggler {
+  padding: 12px;
+  background-color: #222;
+  color: aliceblue;
+}
+
+#openNav {
+  border: 1px solid #eee;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  background-color: rgb(59, 59, 59);
+  cursor: pointer;
 }
