--- a/public/main.css
+++ b/public/main.css
@@ -32,6 +32,7 @@ header h1 {
 main {
   margin-top: 50px;
   margin-bottom: 50px;
+  width: 100%;
 }
 
 .sidenav {
@@ -89,17 +90,118 @@ main {
 
 .post {
   width: 100%;
-  max-width: 400px;
+  max-width: 350px;
   margin: 10px;
+  padding: 10px;
   border: 5px solid;
 }
 
 .post > div {
   display: block;
+  width: 100%;
   height: 350px;
   background-size: 100%;
 }
 
 .post > div:hover {
   background-size: 120%;
+}
+
+#loading {
+  display: none;
+}
+
+main.postContainer {
+  width: 70%;
+  margin: auto;
+  padding: 40px;
+}
+
+#singlePost {
+  text-align: center;
+}
+
+#singlePost img {
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: -2px 5px 3px -1px rgba(0, 0, 0, 0.33);
+  -webkit-box-shadow: -2px 5px 3px -1px rgba(0, 0, 0, 0.33);
+  -moz-box-shadow: -2px 5px 3px -1px rgba(0, 0, 0, 0.33);
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#edit {
+  display: none;
+  margin: 10px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgb(41, 128, 62);
+  color: white;
+}
+
+#edit:hover {
+  background-color: rgb(223, 223, 223);
+  color: black;
+  transition: 0.5s ease-in-out;
+}
+
+#delete {
+  display: none;
+  margin: 10px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: rgb(230, 44, 44);
+  color: white;
+}
+
+#delete:hover {
+  background-color: rgb(223, 223, 223);
+  color: black;
+  transition: 0.5s ease-in-out;
+}
+
+.lds-ring {
+  display: none;
+  /* display: inline-block; */
+  /* position: relative; */
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  left: 50%;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid rgb(65, 65, 65);
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: rgb(78, 78, 78) transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
