--- a/public/main.css
+++ b/public/main.css
@@ -141,9 +141,12 @@ main {
 .post {
   width: 100%;
   max-width: 350px;
+  height: 420px;
   margin: 10px;
   padding: 10px;
   border: 5px solid;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 
 .post > div {
@@ -169,6 +172,8 @@ main.postContainer {
 
 #singlePost {
   text-align: center;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 
 #singlePost img {
